--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up" style="display:inline-block;">
           <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom:5px;display:inline-block;">
-            <a href="https://github.com/harikishore2006/ISL" target="_blank" rel="noreferrer"><img style="padding:5px 5px;" src="assets\img\projects\ISL image.png" class="img-fluid" width="300" height="300"></a>
-            <a href="https://github.com/harikishore2006/ISL" target="_blank" rel="noreferrer"><h5 style="padding:5px 5px;color:#00bfff"><strong>Indian Sign Language</strong></h5></a>
+            <a href="https://github.com/harikishore2006/sign-language.git" target="_blank" rel="noreferrer"><img style="padding:5px 5px;" src="assets\img\projects\ISL image.png" class="img-fluid" width="300" height="300"></a>
+            <a href="https://github.com/harikishore2006/sign-language.git" target="_blank" rel="noreferrer"><h5 style="padding:5px 5px;color:#00bfff"><strong>Indian Sign Language</strong></h5></a>
             <p style="padding:0px 2px;color:#fff;">Developed a system to recognize Indian Sign Language gestures using computer vision and machine learning techniques. The model detects hand signs and translates them into readable text, aiding communication for the hearing-impaired.</p>
           </div>
           <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom:5px;display:inline-block;">
