--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <header id="header" class="header-tops">
     <div class="container">
       <h1><a href="index.html">Harikishore Kamaladhasan</a></h1>
-      <h2 style="color:#fff">I am <span class="typing" style="color:#efcf1a"></span></h2>
+      <h2 style="color:#000000">I am <span class="typing" style="color:#efcf1a"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header"> <span>Home</span></a></li>
