--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
             <a href="https://kongunadu.ac.in/" target="_blank"><img src="assets\img\education\kongunadu logo.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
             <h4 style="text-align:left;"><a href="https://kongunadu.ac.in/" target="_blank" style="color:#d61212">Kongunadu Institution</a><br> </h4>
             <h5 style="text-align:left;"><em>B.Tech-Artificial Intelligence & Data Scienece: <strong>GPA: 8.58/10.00</strong></em></h5>
-            <span class="left" style="float:left;color:#000000;"><em>2023-2027</em></span>
-            <span class="right" style="float:right;color:#000000;"><em>Trichy, Tamil Nadu</em></span><br><br>
+            <span class="left" style="float:left;color:#ffffff;"><em>2023-2027</em></span>
+            <span class="right" style="float:right;color:#ffffff;"><em>Trichy, Tamil Nadu</em></span><br><br>
             <h6 style="text-align:left;"><strong>Field of Specialization:</strong> NLP, AI & ML, Data Analytics</h6>
             <h6 style="text-align:left;"><strong>Skills</strong></h6>
             <ul style="columns:2;text-align:left;">
