--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <a href="https://brindhavanpublicschool.in/" target="_blank"><img src="assets\img\education\brindhavan logo.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
             <h4 style="text-align:left;"><a href="https://brindhavanpublicschool.in/" target="_blank" style="color:#d61212">Brindhavan Higher Secondary School</a><br> </h4>
-            <h5 style="text-align:left;"><em>High School Percentage; <strong>Percentage : 89/100</strong></em></h5>
+            <h5 style="text-align:left; color:#ffffff"><em>High School Percentage; <strong>Percentage : 89/100</strong></em></h5>
             <span class="left" style="float:left;color:#fff;"><em>2019-2021</em></span>
             <span class="right" style="float:right;color:#fff;"><em>Pattukkottai, Thanjavur</em></span><br><br>
           </div>
