--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <section id="education" class="services">
     <div class="container">
       <div class="section-title">
-        <h2>Education</h2>
+        <h2 style="color: black;">Education</h2>
       </div>
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
