--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <section id="about" class="about">
     <div class="about-me container">
       <div class="section-title">
-        <h2>About Me</h2>
+        <h2 style="color:black">About Me</h2>
       </div>
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
@@ -201,7 +201,7 @@
   <section id="projects" class="services">
     <div class="container">
       <div class="section-title">
-        <h2>Projects</h2>
+        <h2 style="color:black">Projects</h2>
       </div>
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up" style="display:inline-block;">
@@ -229,7 +229,7 @@
   <section id="skills" class="services">
     <div class="container">
       <div class="section-title">
-        <h2>Skills</h2>
+        <h2 style="color:black">Skills</h2>
       </div>
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
@@ -370,7 +370,7 @@
   <section id="contact" class="contact">
     <div class="container">
       <div class="section-title">
-        <h2>Contact</h2>
+        <h2 style="color:black">Contact</h2>
       </div>
       <div class="row">
         <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
